clang/test/BSC/Negative/OwnedStruct/memoryleak/destructor/generic-owned-struct-desturctor-param.cbs
// RUN: %clang_cc1 -verify %s
_Owned struct A<T> {
    _Public:
    int * _Owned a;
    ~A(A<T> this) {
    }// expected-error {{destructor for`_Owned A<int>` incorrect, this.a is of _Owned type and needs to be handled manually}}
};
int main() {
    int local = 1;
    A<int> a ={.a = __take_from_raw(&local)};
    return 0;
}
